--- a/Jupyter/RandomForestClassifier.ipynb
+++ b/Jupyter/RandomForestClassifier.ipynb
@@ -259,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fca02354370>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd19fc48370>"
       ]
      },
      "execution_count": 6,
@@ -736,7 +736,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fca02ad1af0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd19fdd0eb0>"
       ]
      },
      "execution_count": 10,
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,8 +883,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -892,21 +894,21 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.77      0.32      0.45      1596\n",
+      "           1       0.77      0.33      0.46      1596\n",
       "           2       0.65      0.75      0.69      7563\n",
       "           3       0.57      0.73      0.64      7551\n",
-      "           4       0.76      0.14      0.23      2696\n",
+      "           4       0.77      0.14      0.24      2696\n",
       "           5       0.00      0.00      0.00       159\n",
       "\n",
       "    accuracy                           0.62     19565\n",
-      "   macro avg       0.55      0.39      0.40     19565\n",
+      "   macro avg       0.55      0.39      0.41     19565\n",
       "weighted avg       0.64      0.62      0.59     19565\n",
       "\n",
-      "[[ 504 1028   64    0    0]\n",
-      " [ 134 5678 1751    0    0]\n",
-      " [  11 1939 5537   64    0]\n",
-      " [   2  143 2177  374    0]\n",
-      " [   0    1  105   53    0]]\n"
+      "[[ 522 1005   69    0    0]\n",
+      " [ 142 5658 1763    0    0]\n",
+      " [   9 1942 5539   61    0]\n",
+      " [   3  136 2179  378    0]\n",
+      " [   0    3  104   52    0]]\n"
      ]
     },
     {
@@ -922,6 +924,13 @@
     "print(classification_report(y_test, pred_rfc))\n",
     "print(confusion_matrix(y_test, pred_rfc))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
